--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+
+# images and video
+*.mp4
+*.png
+*.jpg
+
+images/*
