--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RedefStructs = "91f8d46f-6a72-421b-a56e-b73459bd5e0a"
+SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
